--- a/src/styles/boards.css
+++ b/src/styles/boards.css
@@ -1,12 +1,3 @@
-body {
-  height: 100dvh;
-  background-color: rgb(61, 58, 58);
-  display: flex;
-
-  justify-content: space-around;
-  align-items: center;
-}
-
 div.board {
   display: grid;
   grid-template-columns: repeat(10, 40px);
@@ -14,7 +5,7 @@ div.board {
   gap: 2px;
 }
 
-div div {
+div.board div {
   background-color: teal;
 }
 
