--- a/src/styles/boards.css
+++ b/src/styles/boards.css
@@ -9,7 +9,7 @@
   background-color: teal;
 }
 
-.square.hit {
+.square-hit {
   background-color: white;
 }
 
@@ -33,6 +33,6 @@
   background-color: yellow;
 }
 
-.ship-part.hit {
+.ship-part-hit {
   background-color: red;
 }
