fix selection dragging

--- a/src/styles/boards.css
+++ b/src/styles/boards.css
@@ -1,4 +1,6 @@
 .board {
+  user-select: none;
+  -webkit-user-select: none;
   display: grid;
   grid-template-columns: repeat(10, 40px);
   grid-template-rows: repeat(10, 40px);
