add board numbers and letters

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -3,8 +3,7 @@ body {
   background-color: rgb(61, 58, 58);
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: max-content 1fr;
 }
