--- a/src/styles/boards.css
+++ b/src/styles/boards.css
@@ -1,3 +1,4 @@
+/* rename boards wrapper */
 .boards-wrapper {
   display: flex;
   justify-content: space-around;
@@ -7,8 +8,44 @@
 .boards-wrapper-rotated {
   flex-direction: row-reverse;
 }
+/* */
+
+.board-wrapper {
+  font-weight: bold;
+  font-family: monospace;
+  display: grid;
+  grid-template-areas:
+    '. letters'
+    'numbers board';
+  grid-template-columns: 1em max-content;
+  grid-template-rows: 1em max-content;
+  gap: 2px;
+}
+
+.board-numbers {
+  grid-area: numbers;
+  display: grid;
+  gap: 2px;
+
+  grid-auto-flow: row;
+  grid-auto-rows: 1fr;
+  align-items: center;
+  justify-items: center;
+}
+
+.board-letters {
+  grid-area: letters;
+  display: grid;
+  gap: 2px;
+
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  align-items: center;
+  justify-items: center;
+}
 
 .board {
+  grid-area: board;
   user-select: none;
   -webkit-user-select: none;
   display: grid;
