--- a/src/styles/boards.css
+++ b/src/styles/boards.css
@@ -1,45 +1,48 @@
-/* rename boards wrapper */
-.boards-wrapper {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.boards-wrapper-rotated {
-  flex-direction: row-reverse;
-}
-/* */
-
 .board-wrapper {
-  font-weight: bold;
-  font-family: monospace;
   display: grid;
+  justify-self: center;
+  align-self: center;
   grid-template-areas:
+    'team team'
     '. letters'
     'numbers board';
   grid-template-columns: 1em max-content;
-  grid-template-rows: 1em max-content;
+  grid-template-rows: max-content 1em max-content;
+  gap: 2px;
+}
+
+.board-team {
+  font-size: 1.3rem;
+  padding: 0.5rem;
+  text-align: center;
+
+  grid-area: team;
+}
+
+.board-numbers,
+.board-letters {
+  font-weight: bold;
+  font-family: monospace;
+  display: grid;
   gap: 2px;
 }
 
 .board-numbers {
   grid-area: numbers;
-  display: grid;
-  gap: 2px;
 
   grid-auto-flow: row;
   grid-auto-rows: 1fr;
+
   align-items: center;
   justify-items: center;
 }
 
 .board-letters {
   grid-area: letters;
-  display: grid;
-  gap: 2px;
 
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
+
   align-items: center;
   justify-items: center;
 }
