--- a/src/styles/endscreen.css
+++ b/src/styles/endscreen.css
@@ -1,6 +1,8 @@
 .endscreen {
   display: none;
   position: absolute;
+  top: 0;
+  right: 0;
   height: 100dvh;
   width: 100dvw;
   background-color: rgba(0, 0, 0, 0.7);
