--- a/src/styles/switchScreen.css
+++ b/src/styles/switchScreen.css
@@ -1,9 +1,11 @@
 .switchscreen {
   display: none;
   position: absolute;
+  top: 0;
+  right: 0;
   height: 100dvh;
   width: 100dvw;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgb(31, 31, 31);
 }
 
 .switchscreen-active {
