--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,7 +1,10 @@
 :root {
   --gray-dark: #2e282a;
+  --gray: #99a3a3;
   --white: #f7fff7;
-  --blue: #0fa3b1;
+  --blue: #00c6d8;
   --green: #82ff9e;
   --green-light: #a9fbc3;
+  --red: #ff3b21;
+  --yellow: #f7e733;
 }
