style control panel buttons

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,8 +3,11 @@
   --gray: #99a3a3;
   --white: #f7fff7;
   --blue: #00c6d8;
-  --green: #82ff9e;
-  --green-light: #a9fbc3;
+  --green: #33e62d;
+  --green-light: #39ff32;
   --red: #ff3b21;
   --yellow: #f7e733;
+
+  --brown: #845c48;
+  --brown-dark: #644536;
 }
