--- a/src/styles/sections/controlPanel.css
+++ b/src/styles/sections/controlPanel.css
@@ -5,28 +5,7 @@
   gap: 1.5rem;
 }
 
-.confirm-button,
-.random-button {
-  color: rgb(255, 255, 255);
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 2px;
-
-  font-weight: 400;
-  font-size: 1.2rem;
-}
-
 .confirm-button {
-  background-color: rgb(57, 255, 50);
-  box-shadow: 0px 5px 0px 0px rgb(51, 230, 45);
-}
-
-.random-button {
-  background-color: white;
-}
-
-.confirm-button:active,
-.random-button:active {
-  transform: translate(0px, 5px);
-  box-shadow: 0px 1px 0px 0px rgb(51, 230, 45);
+  --shadow-color: var(--green);
+  background-color: var(--green-light);
 }
