--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -13,4 +13,9 @@
 
   --yellow-light: #f0c105;
   --yellow-lighter: #fbcf23;
+
+  --blue-light-0: #0093f5;
+  --blue-dark-0: #0282f2;
+  --blue-light-1: #0164a7;
+  --blue-dark-1: #014e81;
 }
