--- a/src/styles/modals/startScreen.css
+++ b/src/styles/modals/startScreen.css
@@ -6,26 +6,34 @@
     'mode0 . mode1'
     'play play play';
 
-  grid-template-columns: 8rem 5rem 8rem;
-  grid-template-rows:
-    max-content max-content 2rem
-    2rem;
+  grid-template-columns: 1fr 5rem 1fr;
+  grid-template-rows: max-content 2.5rem max-content max-content;
 
-  gap: 1rem;
+  column-gap: 1.5rem;
+  row-gap: 2.5rem;
 }
 
 .startscreen-header {
   text-align: center;
   grid-area: header;
+  padding: 0;
+  margin: 0;
+  font-size: 3.5rem;
+  font-weight: 500;
+}
+
+.startscreen-name {
+  font-size: 1.7rem;
+  margin: 0;
+  display: grid;
+  place-items: center;
 }
 
 .startscreen-name-0 {
-  text-align: center;
   grid-area: name0;
 }
 
 .startscreen-name-1 {
-  text-align: center;
   grid-area: name1;
 }
 
@@ -36,18 +44,42 @@
   grid-area: mode1;
 }
 
-.startscreen-mode-0 {
+.startscreen-mode-label {
+  background-color: var(--blue-light-0);
+  box-shadow: 0 5px 0px 0px var(--blue-dark-0);
+  color: var(--white);
+
+  display: block;
+  user-select: none;
+  text-align: center;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 2px;
+  font-size: 1.2rem;
+
+  transition:
+    transform 0.1s ease-out,
+    box-shadow 0.1s ease-out,
+    background-color 0.1s;
 }
 
-.startscreen-mode-1 {
+input:checked + .startscreen-mode-label {
+  background-color: var(--blue-light-1);
+  box-shadow: 0px 1px 0px 0px var(--blue-dark-1);
+  transform: translate(0px, 5px);
+  transition: none;
 }
 
-.startscreen-mode-active {
-  background-color: red;
+.startscreen-mode {
+  display: none;
+  appearance: none;
 }
 
 .startscreen-play {
   grid-area: play;
+
+  --shadow-color: var(--green);
+  background-color: var(--green-light);
 }
 
 .startscreen-switch {
