--- a/src/styles/modals/switchScreen.css
+++ b/src/styles/modals/switchScreen.css
@@ -1,2 +1,13 @@
 .switchscreen-dialogbox {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 1.5rem;
+}
+
+.switchscreen-dialogbox p {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
 }
