--- a/src/styles/modals/startScreen.css
+++ b/src/styles/modals/startScreen.css
@@ -86,6 +86,11 @@ input:checked + .startscreen-mode-label {
   display: none;
 }
 
+.startscreen-switch img {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
 .startscreen-switch-active {
   display: block;
 }
